# VeriDoc-RL

VeriDoc-RL/: .gitignore  README.md  pyproject.toml
VeriDoc-RL/configs/: autodl.env.example  experiment_matrix.yaml  pipeline.autodl.qwen3_0p6.yaml  pipeline.autodl.qwen3_1p7.yaml  pipeline.qwen35.yaml  pipeline.qwen3_0p6.yaml  pipeline.qwen3_1p7.yaml
VeriDoc-RL/docs/: autodl_cached_model_setup.md  autodl_online_hf_setup.md  autodl_runbook.md  local_data_cloud_training_runbook.md  pipeline_deep_dive.md  project_blueprint.md  resume_alignment.md  rules_catalog.md
VeriDoc-RL/requirements/: autodl.rl.txt  autodl.train.txt
VeriDoc-RL/scripts/: README.md  bootstrap_autodl_envs.sh  compare_phase_reports.py  generate_candidates.py  generate_experiment_plan.py  generate_preference_dataset.py  generate_sft_dataset.py  generate_training_manifests.py  prefetch_hf_model.py  prepare_training_data.py  prepare_training_runtime.py  prepare_verl_runtime.py  rebuild_wsl_envs.sh  run_inference.py  run_phase_a_eval.py  run_pipeline.py  start_sglang_server.sh
VeriDoc-RL/src/veridoc_rl/: __init__.py  form_spec.py  model_defaults.py  normalizers.py  path_utils.py  predictions.py  rules.py  schema.py  smoke.py
VeriDoc-RL/src/veridoc_rl.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
VeriDoc-RL/src/veridoc_rl/data/: __init__.py  preferences.py  synthetic.py
VeriDoc-RL/src/veridoc_rl/evaluation/: README.md  __init__.py  comparison.py  metrics.py  reporting.py
VeriDoc-RL/src/veridoc_rl/experiments/: __init__.py  matrix.py
VeriDoc-RL/src/veridoc_rl/fixtures/: __init__.py  minimal_form_fixture.json
VeriDoc-RL/src/veridoc_rl/inference/: __init__.py  candidates.py  runner.py
VeriDoc-RL/src/veridoc_rl/orchestration/: __init__.py  paths.py  runner.py  spec.py  stages.py  state.py
VeriDoc-RL/src/veridoc_rl/rewards/: __init__.py  compose.py
VeriDoc-RL/src/veridoc_rl/training/: __init__.py  corpus.py  finetune.py  manifests.py  prompting.py  runtime.py  trl_dpo.py  trl_sft.py  verl_reward.py
VeriDoc-RL/src/veridoc_rl/verifiers/: __init__.py  base.py  form.py
VeriDoc-RL/tests/: conftest.py  test_evaluation.py  test_experiments.py  test_inference_candidates.py  test_orchestration.py  test_preferences.py  test_rewards.py  test_rules.py  test_schema.py  test_smoke.py  test_synthetic_data.py  test_training.py  test_trl_dpo.py  test_verifiers.py  test_verl_runtime.py
