[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "veridoc-rl"
version = "0.1.0"
description = "Verifier-guided RL scaffold for insurance form extraction."
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = [
  "mypy>=1.10,<2",
  "pytest>=7.4,<9",
  "ruff>=0.5,<1",
]

[project.scripts]
veridoc-rl-smoke = "veridoc_rl.smoke:main"
veridoc-rl-generate-sft = "veridoc_rl.data.synthetic:main"
veridoc-rl-generate-preferences = "veridoc_rl.data.preferences:main"
veridoc-rl-phase-a-eval = "veridoc_rl.evaluation.reporting:main"
veridoc-rl-generate-plan = "veridoc_rl.experiments.matrix:main"
veridoc-rl-compare-reports = "veridoc_rl.evaluation.comparison:main"
veridoc-rl-prepare-training = "veridoc_rl.training.corpus:main"
veridoc-rl-generate-training-manifests = "veridoc_rl.training.manifests:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
veridoc_rl = ["fixtures/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
check_untyped_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
pretty = true
